--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2156,7 +2156,7 @@ input[type="radio"] + label:before {
   border-radius: 0.35em;
   border: solid 3px rgba(255, 255, 255, 0.5);
   color: #fff;
-  content: "View";
+  content: "Visit";
   display: inline-block;
   font-size: 0.8em;
   font-weight: 400;
@@ -2172,9 +2172,9 @@ input[type="radio"] + label:before {
   white-space: nowrap;
 }
 
-.image.thumb:hover:after {
+/* .image.thumb:hover:after {
   opacity: 1;
-}
+} */
 
 .image.thumb:hover:before {
   background: url("images/overlay.png"), url("images/overlay.png");
